[gd_scene load_steps=15 format=2]

[ext_resource path="res://Level1/Level1.gd" type="Script" id=1]
[ext_resource path="res://InputOutput/InputOutput.tscn" type="PackedScene" id=2]
[ext_resource path="res://GenericGameScenes/ColoredFrames.tscn" type="PackedScene" id=3]
[ext_resource path="res://TitleScreen/FullScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://GenericGameScenes/ReturnToTitle.tscn" type="PackedScene" id=5]
[ext_resource path="res://RunEnvironment/RunEnvironment.tscn" type="PackedScene" id=6]
[ext_resource path="res://GenericGameScenes/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://ActionSpace/MovableActionSpace.tscn" type="PackedScene" id=8]
[ext_resource path="res://UsersGuide/UsersGuide.tscn" type="PackedScene" id=9]
[ext_resource path="res://Level1/Level1Guide.gd" type="Script" id=10]
[ext_resource path="res://GenericGameScenes/NextLevel.tscn" type="PackedScene" id=11]
[ext_resource path="res://GenericGameScenes/ResetLevel.tscn" type="PackedScene" id=12]
[ext_resource path="res://VisualProcess/VisualProcess.tscn" type="PackedScene" id=13]
[ext_resource path="res://Gamification/Gamification.tscn" type="PackedScene" id=14]

[node name="Level1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1840.0
margin_bottom = -920.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1840.0
margin_bottom = 920.0
mouse_filter = 2
color = Color( 0.0117647, 0.0745098, 0.2, 1 )

[node name="InputOutput" parent="." instance=ExtResource( 2 )]
editor/display_folded = true

[node name="StartInputArea" parent="InputOutput" index="0"]
position = Vector2( 500, 200 )

[node name="FinishInputArea" parent="InputOutput" index="1"]
position = Vector2( 1080, 430 )

[node name="InputBase" parent="InputOutput" index="2"]
editor/display_folded = true

[node name="OutputBase" parent="InputOutput" index="3"]
editor/display_folded = true

[node name="ColoredFrames" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="FullScreen" parent="." instance=ExtResource( 4 )]

[node name="ReturnToTitle" parent="." instance=ExtResource( 5 )]

[node name="RunEnvironment" parent="." instance=ExtResource( 6 )]

[node name="Inventory" parent="." instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="MovableActionSpace" parent="Inventory" instance=ExtResource( 8 )]
position = Vector2( 1000, 100 )

[node name="MovableActionSpace2" parent="Inventory" instance=ExtResource( 8 )]
position = Vector2( 614.575, 304.676 )

[node name="UsersGuide" parent="." instance=ExtResource( 9 )]
script = ExtResource( 10 )

[node name="NextLevel" parent="." instance=ExtResource( 11 )]

[node name="ResetLevel" parent="." instance=ExtResource( 12 )]

[node name="VisualProcess" parent="." instance=ExtResource( 13 )]

[node name="Gamification" parent="." instance=ExtResource( 14 )]
[connection signal="input_output_defined" from="." to="RunEnvironment" method="_on_input_output_defined"]
[connection signal="output_position" from="InputOutput" to="VisualProcess" method="_on_InputOutput_output_position"]
[connection signal="output_visual_entered" from="InputOutput" to="VisualProcess" method="_on_InputOutput_output_visual_entered"]
[connection signal="start_input_entered" from="InputOutput" to="Inventory" method="_on_InputOutput_start_input_entered"]
[connection signal="start_input_exited" from="InputOutput" to="Inventory" method="_on_InputOutput_start_input_exited"]
[connection signal="start_input_position" from="InputOutput" to="VisualProcess" method="_on_InputOutput_start_input_position"]
[connection signal="start_input_visual_entered" from="InputOutput" to="VisualProcess" method="_on_InputOutput_start_input_visual_entered"]
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="ReturnToTitle" to="." method="_on_ReturnToTitle_pressed"]
[connection signal="attempt_to_run" from="RunEnvironment" to="Gamification" method="_on_RunEnvironment_attempt_to_run"]
[connection signal="frame_flashy" from="RunEnvironment" to="ColoredFrames" method="_on_RunEnvironment_frame_flashy"]
[connection signal="level_succeded" from="RunEnvironment" to="ColoredFrames" method="_on_RunEnvironment_level_succeded"]
[connection signal="level_succeded" from="RunEnvironment" to="." method="_on_RunEnvironment_level_succeded"]
[connection signal="points_garanted" from="RunEnvironment" to="Gamification" method="_on_RunEnvironment_points_garanted"]
[connection signal="visual_process_arguments" from="RunEnvironment" to="VisualProcess" method="_on_RunEnvironment_visual_process_arguments"]
[connection signal="change_area_entered" from="Inventory/MovableActionSpace" to="VisualProcess" method="_on_MovableActionSpace_change_area_entered"]
[connection signal="entered_tree" from="Inventory/MovableActionSpace" to="Inventory" method="_on_MovableActionSpace_entered_tree"]
[connection signal="change_area_entered" from="Inventory/MovableActionSpace2" to="VisualProcess" method="_on_MovableActionSpace_change_area_entered"]
[connection signal="entered_tree" from="Inventory/MovableActionSpace2" to="Inventory" method="_on_MovableActionSpace_entered_tree"]
[connection signal="next_level" from="NextLevel" to="." method="_on_NextLevel_next_level"]
[connection signal="reset_level" from="ResetLevel" to="." method="_on_ResetLevel_reset_level"]

[editable path="InputOutput"]
